--- a/package.json
+++ b/package.json
@@ -14,16 +14,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "colors": "^1.4.0",
     "concurrently": "^6.0.0",
     "config": "^3.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "i18next": "^20.2.1",
+    "i18next-browser-languagedetector": "^6.1.0",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "react-calendar": "^3.1.0",
-    "react-modern-calendar-datepicker": "^3.1.6"
+    "react-dark-mode-toggle": "^0.2.0",
+    "react-i18next": "^11.8.13",
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-switch": "^6.0.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   }
 }
